--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET"/>
 
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_cat"
@@ -14,6 +15,7 @@
         android:theme="@style/Theme.ApiExampleApp">
         <activity
             android:name=".MainActivity"
+            android:label="@string/cat_memes_app"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
